--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -14,7 +14,16 @@ jobs:
     steps:
       - name: Checkout the files
         uses: actions/checkout@v2
-
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: 6.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --no-restore
+      - name: Test
+        run: dotnet test --no-build --verbosity normal
       - name: Deploy to Server 1
         uses: easingthemes/ssh-deploy@main
         env:
@@ -22,3 +31,4 @@ jobs:
           REMOTE_HOST: ${{ secrets.HOST_DNS }}
           REMOTE_USER: ${{ secrets.USERNAME }}
           TARGET: ${{ secrets.TARGET_DIR }}
+          SOURCE: ~/work/DevOpsStuff/DevOpsStuff/DevOpsStuff/bin/Debug/net6.0/
