--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -31,4 +31,4 @@ jobs:
           REMOTE_HOST: ${{ secrets.HOST_DNS }}
           REMOTE_USER: ${{ secrets.USERNAME }}
           TARGET: ${{ secrets.TARGET_DIR }}
-          SOURCE: ~/work/DevOpsStuff/DevOpsStuff/DevOpsStuff/bin/Debug/net6.0/
+          SOURCE: DevOpsStuff/bin/Debug/net6.0/
